<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AsAnimStory</string>
    <string name="choose_story_header">Choose story to edit</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_select_person">SelectPersonActivity</string>
    <string name="title_activity_anim_edit">Edit Story</string>
    <string name="title_select_image">Select Image</string>
    <string name="btn_select_image">Select Image</string>
    <string name="btn_new_story">New Story</string>
    <string name="btn_story2">Story 2</string>
    <string name="btn_done">Done</string>
    <string name="solve_pentamino">Solve Pentamino</string>
    <string name="edit">Edit</string>

    <!-- Story editing buttons -->
    <string name="btn_back">Back</string>
    <string name="btn_forward">Forward</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_next">Next</string>
    <string name="btn_play">Play</string>
    <string name="btn_play_page">Play_Page</string>
    <string name="btn_save">Save</string>
    <string name="btn_new_page">New_Page</string>
    <string name="btn_insert">InsertCadr</string>
    <string name="btn_remove">RemoveCadr</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="menu_editing">Edit</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_select_image">SelectImageActivity</string>
    <string name="title_activity_new_story">NewStoryActivity</string>
    <string name="story_name">Story Name:</string>
    <string name="start_story">Start Story</string>
    <string name="new_turtle">new_turtle</string>
    <string name="add_suit">add_suit</string>
    <string name="select_back">select_back</string>
    <string name="title_activity_turtle_props">TurtlePropsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="one_image">one_image</string>
    <string name="many_images">many_images</string>
    <string name="select">select</string>
    <string name="all">all</string>
    <string name="figures">figures</string>
    <string name="animals">animals</string>
    <string name="moving">moving</string>
    <string name="people">people</string>
    <string name="pairs">pairs</string>
    <string name="replica">replica</string>
    <string name="record_audio">record_audio</string>
    <string name="record">record</string>
    <string name="stop_recording">stop_recording</string>
    <string name="play">play</string>
    <string name="menu">menu</string>
    <string name="title_activity_show_story">ShowStoryActivity</string>

</resources>