<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseStoryActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_story_header"
        android:textSize="@dimen/header_size" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/new_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_new_story" />

        <Button
            android:id="@+id/select_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_image" />

        <Button
            android:id="@+id/pentamino_solver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solve_pentamino" />
        </LinearLayout>

</RelativeLayout>